// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function with a bucket binding 1`] = `
"new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(event) { await this.bucket.put(\\"hello.txt\\", event); }
};
})())({
bucket: new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/bucket.inflight.ts\\")).BucketClient(process.env[\\"BUCKET_NAME_1357ca3a\\"])
})"
`;

exports[`function with a bucket binding 2`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_Function_IamRole_88AD864C\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_Function_IamRolePolicy_8C4F8AF5\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"s3:PutObject*\\\\\\",\\\\\\"s3:Abort*\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.root_Bucket_966015A6.arn}\\\\\\",\\\\\\"\${aws_s3_bucket.root_Bucket_966015A6.arn}/*\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_Function_IamRole_88AD864C.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_Function_IamRolePolicyAttachment_AF131EC2\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_Function_IamRole_88AD864C.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_Function_9F694E40\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"BUCKET_NAME_1357ca3a\\": \\"\${aws_s3_bucket.root_Bucket_966015A6.bucket}\\",
            \\"WING_FUNCTION_NAME\\": \\"Function-c852aba6\\"
          }
        },
        \\"function_name\\": \\"Function-c852aba6\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_Function_IamRole_88AD864C.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_Function_Bucket_8CDD903C.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_Function_S3Object_A62722D8.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_Bucket_966015A6\\": {
        \\"bucket\\": \\"bucketc88fdc5f\\"
      },
      \\"root_Function_Bucket_8CDD903C\\": {}
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"root_Bucket_PublicAccessBlock_B0AF4CE5\\": {
        \\"block_public_acls\\": true,
        \\"block_public_policy\\": true,
        \\"bucket\\": \\"\${aws_s3_bucket.root_Bucket_966015A6.bucket}\\",
        \\"ignore_public_acls\\": true,
        \\"restrict_public_buckets\\": true
      }
    },
    \\"aws_s3_bucket_server_side_encryption_configuration\\": {
      \\"root_Bucket_Encryption_BE486177\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_Bucket_966015A6.bucket}\\",
        \\"rule\\": [
          {
            \\"apply_server_side_encryption_by_default\\": {
              \\"sse_algorithm\\": \\"AES256\\"
            }
          }
        ]
      }
    },
    \\"aws_s3_object\\": {
      \\"root_Function_S3Object_A62722D8\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_Function_Bucket_8CDD903C.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`function with a function binding 1`] = `
"new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(event) { console.log(event); }
};
})())({

})"
`;

exports[`function with a function binding 2`] = `
"new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(event) {
      console.log(\\"Event: \\" + event);
      await this.function.invoke(JSON.stringify({ hello: \\"world\\" }));
    }
};
})())({
function: new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/function.inflight.ts\\")).FunctionClient(process.env[\\"FUNCTION_NAME_50735b21\\"])
})"
`;

exports[`function with a function binding 3`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_Function1_IamRole_7017166A\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      },
      \\"root_Function2_IamRole_1D1C491F\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_Function1_IamRolePolicy_2AD9115C\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_Function1_IamRole_7017166A.name}\\"
      },
      \\"root_Function2_IamRolePolicy_66C89FF5\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"lambda:InvokeFunction\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_lambda_function.root_Function1_F6563EFC.arn}\\\\\\"],\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_Function2_IamRole_1D1C491F.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_Function1_IamRolePolicyAttachment_8C092D66\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_Function1_IamRole_7017166A.name}\\"
      },
      \\"root_Function2_IamRolePolicyAttachment_689FE230\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_Function2_IamRole_1D1C491F.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_Function1_F6563EFC\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Function1-c87c16f1\\"
          }
        },
        \\"function_name\\": \\"Function1-c87c16f1\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_Function1_IamRole_7017166A.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_Function1_Bucket_8268CF06.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_Function1_S3Object_AA76C357.key}\\"
      },
      \\"root_Function2_A135D90B\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"FUNCTION_NAME_50735b21\\": \\"\${aws_lambda_function.root_Function1_F6563EFC.arn}\\",
            \\"WING_FUNCTION_NAME\\": \\"Function2-c827e998\\"
          }
        },
        \\"function_name\\": \\"Function2-c827e998\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_Function2_IamRole_1D1C491F.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_Function2_Bucket_EE4FCA23.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_Function2_S3Object_7E3557EA.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_Function1_Bucket_8268CF06\\": {},
      \\"root_Function2_Bucket_EE4FCA23\\": {}
    },
    \\"aws_s3_object\\": {
      \\"root_Function1_S3Object_AA76C357\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_Function1_Bucket_8268CF06.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      },
      \\"root_Function2_S3Object_7E3557EA\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_Function2_Bucket_EE4FCA23.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`function with a queue binding 1`] = `
"new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(event) { await this.queue.push(\\"info\\"); }
};
})())({
queue: new (require(\\"[REDACTED]/wingsdk/src/target-tf-aws/queue.inflight.ts\\")).QueueClient(process.env[\\"QUEUE_URL_1cfcc997\\"])
})"
`;

exports[`function with a queue binding 2`] = `
"new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(event) { console.log(\\"Received\\" + event); }
};
})())({

})"
`;

exports[`function with a queue binding 3`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_Function_IamRole_88AD864C\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      },
      \\"root_QueueOnMessage5cb7e554_IamRole_6907C7E4\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_Function_IamRolePolicy_8C4F8AF5\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"sqs:SendMessage\\\\\\",\\\\\\"sqs:GetQueueAttributes\\\\\\",\\\\\\"sqs:GetQueueUrl\\\\\\"],\\\\\\"Resource\\\\\\":\\\\\\"\${aws_sqs_queue.root_Queue_7193B145.arn}\\\\\\",\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_Function_IamRole_88AD864C.name}\\"
      },
      \\"root_QueueOnMessage5cb7e554_IamRolePolicy_B26620BF\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":[\\\\\\"sqs:ReceiveMessage\\\\\\",\\\\\\"sqs:ChangeMessageVisibility\\\\\\",\\\\\\"sqs:GetQueueUrl\\\\\\",\\\\\\"sqs:DeleteMessage\\\\\\",\\\\\\"sqs:GetQueueAttributes\\\\\\"],\\\\\\"Resource\\\\\\":\\\\\\"\${aws_sqs_queue.root_Queue_7193B145.arn}\\\\\\",\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_QueueOnMessage5cb7e554_IamRole_6907C7E4.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_Function_IamRolePolicyAttachment_AF131EC2\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_Function_IamRole_88AD864C.name}\\"
      },
      \\"root_QueueOnMessage5cb7e554_IamRolePolicyAttachment_D60F3F41\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_QueueOnMessage5cb7e554_IamRole_6907C7E4.name}\\"
      }
    },
    \\"aws_lambda_event_source_mapping\\": {
      \\"root_Queue_EventSourceMapping_A20C741D\\": {
        \\"batch_size\\": 1,
        \\"event_source_arn\\": \\"\${aws_sqs_queue.root_Queue_7193B145.arn}\\",
        \\"function_name\\": \\"\${aws_lambda_function.root_QueueOnMessage5cb7e554_EEFD94BA.function_name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_Function_9F694E40\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"QUEUE_URL_1cfcc997\\": \\"\${aws_sqs_queue.root_Queue_7193B145.url}\\",
            \\"WING_FUNCTION_NAME\\": \\"Function-c852aba6\\"
          }
        },
        \\"function_name\\": \\"Function-c852aba6\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_Function_IamRole_88AD864C.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_Function_Bucket_8CDD903C.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_Function_S3Object_A62722D8.key}\\"
      },
      \\"root_QueueOnMessage5cb7e554_EEFD94BA\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Queue-OnMessage-5cb7e554-c8452af1\\"
          }
        },
        \\"function_name\\": \\"Queue-OnMessage-5cb7e554-c8452af1\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_QueueOnMessage5cb7e554_IamRole_6907C7E4.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_QueueOnMessage5cb7e554_Bucket_31731D7F.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_QueueOnMessage5cb7e554_S3Object_24400915.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_Function_Bucket_8CDD903C\\": {},
      \\"root_QueueOnMessage5cb7e554_Bucket_31731D7F\\": {}
    },
    \\"aws_s3_object\\": {
      \\"root_Function_S3Object_A62722D8\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_Function_Bucket_8CDD903C.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      },
      \\"root_QueueOnMessage5cb7e554_S3Object_24400915\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_QueueOnMessage5cb7e554_Bucket_31731D7F.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    },
    \\"aws_sqs_queue\\": {
      \\"root_Queue_7193B145\\": {
        \\"name\\": \\"Queue-c822c726\\"
      }
    }
  }
}"
`;

exports[`two functions reusing the same IFunctionHandler 1`] = `
"{
  \\"resource\\": {
    \\"aws_iam_role\\": {
      \\"root_Function1_IamRole_7017166A\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      },
      \\"root_Function2_IamRole_1D1C491F\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_Function1_IamRolePolicy_2AD9115C\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_Function1_IamRole_7017166A.name}\\"
      },
      \\"root_Function2_IamRolePolicy_66C89FF5\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_Function2_IamRole_1D1C491F.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_Function1_IamRolePolicyAttachment_8C092D66\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_Function1_IamRole_7017166A.name}\\"
      },
      \\"root_Function2_IamRolePolicyAttachment_689FE230\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_Function2_IamRole_1D1C491F.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_Function1_F6563EFC\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Function1-c87c16f1\\"
          }
        },
        \\"function_name\\": \\"Function1-c87c16f1\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_Function1_IamRole_7017166A.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_Function1_Bucket_8268CF06.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_Function1_S3Object_AA76C357.key}\\"
      },
      \\"root_Function2_A135D90B\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Function2-c827e998\\"
          }
        },
        \\"function_name\\": \\"Function2-c827e998\\",
        \\"handler\\": \\"index.handler\\",
        \\"role\\": \\"\${aws_iam_role.root_Function2_IamRole_1D1C491F.arn}\\",
        \\"runtime\\": \\"nodejs16.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_Function2_Bucket_EE4FCA23.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_Function2_S3Object_7E3557EA.key}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_Function1_Bucket_8268CF06\\": {},
      \\"root_Function2_Bucket_EE4FCA23\\": {}
    },
    \\"aws_s3_object\\": {
      \\"root_Function1_S3Object_AA76C357\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_Function1_Bucket_8268CF06.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      },
      \\"root_Function2_S3Object_7E3557EA\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_Function2_Bucket_EE4FCA23.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;
